--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,6 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-
 /* Global Styles */
 
 body {
@@ -60,7 +59,8 @@ h3 {
   color: #0D0D0D;
 }
 
-p, a {
+p,
+a {
   font-family: "PT Sans", sans-serif;
   font-weight: 400;
   font-size: 1em;
@@ -73,7 +73,6 @@ p, a {
   flex-direction: row;
   justify-content: space-between;
 }
-
 
 /* Menu Bar */
 
@@ -99,7 +98,6 @@ p, a {
   opacity: 0.5;
 }
 
-
 /* Header */
 
 header {
@@ -119,6 +117,7 @@ header h1 {
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
@@ -140,6 +139,7 @@ header p {
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
@@ -157,7 +157,6 @@ header a:hover {
   background: #0D0D0D;
   color: #FFFFFF;
 }
-
 
 /* Project Section */
 
@@ -183,6 +182,7 @@ header a:hover {
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
@@ -235,9 +235,9 @@ header a:hover {
   transition: 0.2s;
 }
 
-.project-wrapper a:hover{
+.project-wrapper a:hover {
   margin: 45px 0 5px 0;
-  box-shadow: 0 5px 28px 0 rgba(0,0,0,0.15)
+  box-shadow: 0 5px 28px 0 rgba(0, 0, 0, 0.15)
 }
 
 .project-wrapper a h3 {
@@ -309,7 +309,6 @@ header a:hover {
   color: #FFFFFF;
 }
 
-
 /* Animated Mockups */
 
 #flying-mockup-1 {
@@ -325,7 +324,7 @@ header a:hover {
   transition: 0.2s;
 }
 
-#flying-mockup-1:hover{
+#flying-mockup-1:hover {
   transform: rotate(0deg);
 }
 
@@ -333,9 +332,11 @@ header a:hover {
   0% {
     margin-top: -200px;
   }
+
   50% {
     margin-top: -190px;
   }
+
   100% {
     margin-top: -200px;
   }
@@ -345,7 +346,7 @@ header a:hover {
   width: 275px;
   height: 300px;
   margin: 0 0 0 40%;
-  
+
   transform: rotate(10deg);
   animation-duration: 4.5s;
   animation-iteration-count: infinite;
@@ -354,7 +355,7 @@ header a:hover {
   transition: 0.2s;
 }
 
-#flying-mockup-2:hover{
+#flying-mockup-2:hover {
   transform: rotate(0deg);
 }
 
@@ -362,14 +363,15 @@ header a:hover {
   0% {
     margin-top: -200px;
   }
+
   50% {
     margin-top: -190px;
   }
+
   100% {
     margin-top: -200px;
   }
 }
-
 
 /* Project Headers */
 
@@ -440,7 +442,6 @@ header.democracy p {
   color: #000000;
 }
 
-
 /* Project Content */
 
 .project-wrapper-text {
@@ -463,6 +464,7 @@ header.democracy p {
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
@@ -485,7 +487,7 @@ header.democracy p {
 .project-wrapper-text figure img {
   border-radius: 10px;
   width: 100%;
-  box-shadow: 0 5px 28px 0 rgba(0,0,0,0.15)
+  box-shadow: 0 5px 28px 0 rgba(0, 0, 0, 0.15)
 }
 
 .project-wrapper-text figure img.no-shadow {
@@ -502,7 +504,7 @@ header.democracy p {
   padding: 15px 0 0 0;
 }
 
-.void-text p{
+.void-text p {
   color: #EEEEEE;
 }
 
@@ -515,7 +517,7 @@ header.democracy p {
   background: #0C0C0C;
 }
 
-.project-background-void h2{
+.project-background-void h2 {
   color: #F8F8F8;
 }
 
@@ -534,19 +536,19 @@ header.democracy p {
 
 }
 
-.button-to-default{
+.button-to-default {
   background: rgb(240, 240, 240);
 }
 
-.button-to-default:hover{
+.button-to-default:hover {
   background: rgb(235, 235, 235);
 }
 
-.button-void{
+.button-void {
   background: #DDDDDD;
 }
 
-.button-void:hover{
+.button-void:hover {
   background: #FFFFFF;
   box-shadow: 0 0 20px -2.5px #5F5F5F;
 }
@@ -589,7 +591,6 @@ a.icon-next {
   filter: invert(1);
 }
 
-
 /* About Me */
 
 #about-me {
@@ -610,6 +611,7 @@ a.icon-next {
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
@@ -625,7 +627,7 @@ a.icon-next {
   flex-direction: row;
 }
 
-.about-me-txt p{
+.about-me-txt p {
   font-size: 1.075em;
   color: #494949;
   padding-top: 1em;
@@ -646,8 +648,6 @@ a.icon-next {
   background-size: cover;
 }
 
-
-
 /* Footer */
 
 footer {
@@ -659,7 +659,8 @@ footer {
   box-sizing: border-box;
 }
 
-footer a, footer p {
+footer a,
+footer p {
   color: #F8F8F8;
 }
 
@@ -686,7 +687,6 @@ footer a:hover {
 .mail-me:hover {
   opacity: 0.5;
 }
-
 
 /* Responsive Styles */
 
@@ -720,10 +720,9 @@ footer a:hover {
 
 }
 
-
 /* Smaller Notebooks & Smaller Tablets */
 
-@media all and (min-width: 600px) and (max-width: 899px){
+@media all and (min-width: 600px) and (max-width: 899px) {
 
   header {
     height: 500px;
@@ -763,9 +762,11 @@ footer a:hover {
     0% {
       margin-top: -180px;
     }
+
     50% {
       margin-top: -170px;
     }
+
     100% {
       margin-top: -180px;
     }
@@ -781,9 +782,11 @@ footer a:hover {
     0% {
       margin-top: -180px;
     }
+
     50% {
       margin-top: -170px;
     }
+
     100% {
       margin-top: -180px;
     }
@@ -810,13 +813,12 @@ footer a:hover {
   footer {
     padding: 0 10vw 0 10vw;
   }
-  
+
   footer a img {
     margin: 0 50px 0 0;
   }
 
 }
-
 
 /* Smartphones */
 
@@ -913,9 +915,11 @@ footer a:hover {
     0% {
       margin-top: -170px;
     }
+
     50% {
       margin-top: -180px;
     }
+
     100% {
       margin-top: -170px;
     }
@@ -931,9 +935,11 @@ footer a:hover {
     0% {
       margin-top: -190px;
     }
+
     50% {
       margin-top: -200px;
     }
+
     100% {
       margin-top: -190px;
     }
@@ -943,11 +949,11 @@ footer a:hover {
     padding: 100px 25px 75px 25px;
     height: auto;
   }
-  
+
   header.project h1 {
     margin: 0 0 25px 0;
   }
-  
+
   .project-wrapper-text {
     padding: 0px 25px 50px 25px;
   }
@@ -957,43 +963,43 @@ footer a:hover {
   }
 
   .project-wrapper-text h2 {
-   font-size: 1.5em;
-   padding-top: 50px
+    font-size: 1.5em;
+    padding-top: 50px
   }
 
   .project-wrapper-text figure {
     padding: 50px 0 50px 0;
     box-shadow: none;
   }
-  
+
   .project-wrapper-text figure img {
     border-radius: 0;
     margin-left: -25px;
     width: 100vw;
     box-shadow: none;
   }
-  
+
   .buttons {
     margin: 50px 0 0 0;
   }
-  
+
   .buttons a {
     font-size: 0.9em;
   }
-  
+
   .buttons a.icon-overview {
     background-size: 12.5px;
     background-position: 0 4px;
     padding: 0 0 0 20px;
   }
-  
+
   .buttons a.icon-next {
     background-size: 10px;
     background-position: 85px 1px;
     padding: 0 25px 0 0;
   }
 
-  #about-me{
+  #about-me {
     padding: 50px 50px 100px 50px;
   }
 
@@ -1005,11 +1011,11 @@ footer a:hover {
     display: flex;
     flex-direction: column-reverse;
   }
-  
+
   .about-me-txt p {
     font-size: 1.05em;
   }
-  
+
   .about-me-img {
     margin: 15px auto 25px auto;
     min-width: 225px;
@@ -1021,9 +1027,8 @@ footer a:hover {
   footer {
     padding: 0 25px 0 25px;
   }
-  
+
   footer a img {
     margin: 0 25px 0 0;
   }
-
 }
