--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,11 @@ h2 {
   color: #000000;
 }
 
+h2 svg {
+  height: 24px;
+  color: #000000;
+}
+
 h3 {
   font-family: "PT Sans", sans-serif;
   letter-spacing: 0.01em;
@@ -275,30 +280,8 @@ header a:hover {
 }
 
 .project-wrapper h2 {
-  margin: 50px 0 0 0;
+  margin: 50px 0 20px 0;
   padding: 50px 0 0 0;
-  background-repeat: no-repeat;
-}
-
-.project-wrapper h2#web {
-  background-image: url("../img/icon-code.svg");
-  background-size: 25px;
-  background-position: 0 59px;
-  padding: 50px 0 15px 40px;
-}
-
-.project-wrapper h2#research {
-  background-image: url("../img/icon-search.svg");
-  background-size: 22.5px;
-  background-position: 0 59px;
-  padding: 50px 0 15px 40px;
-}
-
-.project-wrapper h2#speculative {
-  background-image: url("../img/icon-speculative.svg");
-  background-size: 25px;
-  background-position: 0 59px;
-  padding: 50px 0 15px 40px;
 }
 
 .project-wrapper a {
@@ -749,7 +732,7 @@ footer a {
   transition: 0.2s;
 }
 
-footer a img {
+footer a svg {
   margin-left: 20vw;
   margin-right: 75px;
   width: 25px;
@@ -795,7 +778,7 @@ footer a:hover {
     padding: 0 10vw 0 10vw;
   }
 
-  footer a img {
+  footer a svg {
     margin: 0 75px 0 0;
   }
 
@@ -895,7 +878,7 @@ footer a:hover {
     padding: 0 10vw 0 10vw;
   }
 
-  footer a img {
+  footer a svg {
     margin: 0 50px 0 0;
   }
 
@@ -935,26 +918,12 @@ footer a:hover {
   .project-wrapper h2 {
     font-size: 1.35em;
     margin: 0 0 0 0;
-    padding: 50px 0 0 0;
+    padding: 50px 0 16px 0;
     background-repeat: no-repeat;
   }
 
-  .project-wrapper h2#web {
-    background-size: 20px;
-    background-position: 0 54px;
-    padding: 50px 0 15px 30px;
-  }
-
-  .project-wrapper h2#research {
-    background-size: 17.5px;
-    background-position: 0 54px;
-    padding: 50px 0 15px 30px;
-  }
-
-  .project-wrapper h2#speculative {
-    background-size: 20px;
-    background-position: 0 54px;
-    padding: 50px 0 15px 30px;
+  .project-wrapper h2 svg {
+    height: 16px;
   }
 
   .project-wrapper p {
@@ -1109,7 +1078,7 @@ footer a:hover {
     padding: 0 25px 0 25px;
   }
 
-  footer a img {
+  footer a svg {
     margin: 0 25px 0 0;
   }
 }
