--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 /* Reset */
 
-* {
+*,
+h1,
+body {
   padding: 0;
   margin: 0;
 }
@@ -13,13 +15,8 @@ html {
 
 body {
   overflow-x: hidden;
-  margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-h1 {
-  margin: 0.67em 0;
 }
 
 a {
@@ -81,77 +78,64 @@ button:-moz-focusring,
 
 /* Font Imports */
 
-@font-face {
-  font-family: 'PT Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: local('PT Sans'), local('PTSans-Regular'), url(https://fonts.gstatic.com/s/ptsans/v9/jizaRExUiTo99u79D0KExcOPIDU.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+@import url("https://rsms.me/inter/inter.css");
+html {
+  font-family: "Inter", sans-serif;
+}
+@supports (font-variation-settings: normal) {
+  html {
+    font-family: "Inter var", sans-serif;
+  }
 }
 
 @font-face {
-  font-family: 'PT Sans';
-  font-style: italic;
-  font-weight: 400;
-  src: local('PT Sans Italic'), local('PTSans-Italic'), url(https://fonts.gstatic.com/s/ptsans/v9/jizYRExUiTo99u79D0e0x8mIAjcQ-w.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-@font-face {
-  font-family: 'PT Sans';
+  font-family: "bluu";
+  src: url("../fonts/bluunext-bold-webfont.woff2") format("woff2"),
+    url("../fonts/bluunext-bold-webfont.woff") format("woff"),
+    url("../fonts/bluunext-bold.ttf") format("truetype"),
+    url("../fonts/bluunext-bold-webfont.svg#bluu_nextbold") format("svg");
+  font-weight: normal;
   font-style: normal;
-  font-weight: 700;
-  src: local('PT Sans Bold'), local('PTSans-Bold'), url(https://fonts.gstatic.com/s/ptsans/v9/jizfRExUiTo99u79B_mh0O6tLR8a8zI.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-@font-face {
-  font-family: 'PT Serif';
-  font-style: normal;
-  font-weight: 700;
-  src: local('PT Serif Bold'), local('PTSerif-Bold'), url(https://fonts.gstatic.com/s/ptserif/v9/EJRSQgYoZZY2vCFuvAnt66qSVyvVp8NA.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 /* Global Styles */
 
 body {
-  background: #FFFFFF;
+  background: #ffffff;
 }
 
 h1 {
-  font-family: "PT Serif", serif;
-  font-weight: 700;
-  font-size: 2.5em;
+  font-family: "Bluu", serif;
+  margin-bottom: 8px;
+  font-size: 80px;
   color: #000000;
 }
 
 h2 {
-  font-family: "PT Serif", serif;
+  font-family: "Inter", serif;
+  font-size: 60px;
   font-weight: 700;
-  font-size: 2em;
   color: #000000;
+  display: flex;
+  align-items: center;
 }
 
 h2 svg {
-  height: 24px;
-  color: #000000;
+  padding-right: 16px;
 }
 
 h3 {
-  font-family: "PT Sans", sans-serif;
-  letter-spacing: 0.01em;
-  font-size: 1.75em;
-  color: #0D0D0D;
+  font-family: "Inter", sans-serif;
+  font-size: 24px;
 }
 
 p,
 a {
-  font-family: "PT Sans", sans-serif;
+  font-family: "Inter", sans-serif;
   font-weight: 400;
-  font-size: 1em;
-  line-height: 1.5em;
-  color: #0D0D0D;
+  font-size: 16px;
+  line-height: 160%;
+  color: #000000;
 }
 
 .row-wrapper {
@@ -168,80 +152,55 @@ a {
   flex-direction: row;
   height: 50px;
   width: 100vw;
-  padding: 0 0 0 25px;
   z-index: 1;
 }
 
 .menu-bar a {
-  color: #0D0D0D;
-  background-repeat: no-repeat;
+  color: #000000;
   transition: 0.2s;
-  padding: 15px 25px 0 0;
+  padding: 32px;
   font-weight: 700;
+  display: flex;
+  align-items: center;
+}
+
+.menu-bar a svg {
+  padding-right: 8px;
 }
 
 .menu-bar a:hover {
-  opacity: 0.5;
+  opacity: 0.4;
 }
 
 /* Header */
 
 header {
   box-sizing: border-box;
-  background: #FFFFFF;
-  width: 100vw;
+  background: #ffffff;
+  width: 100%;
   height: 75vh;
+  min-height: 400px;
+  max-height: 800px;
   padding: 25vh 20vw 0 20vw;
 }
 
-header h1 {
-  animation: fade-1 1s;
-  animation-timing-function: ease;
-}
-
-@keyframes fade-1 {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-header p {
-  font-size: 1.15em;
-  line-height: 1.75em;
-
-  animation: fade-2 1s;
-  animation-delay: 0.5s;
-  animation-timing-function: ease;
-  animation-fill-mode: forwards;
-
-  opacity: 0;
-}
-
-@keyframes fade-2 {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
+header p,
+header a {
+  font-size: 18px;
+  line-height: 200%;
 }
 
 header p a {
   font-weight: 700;
-  border-bottom: solid #0D0D0D 2px;
+  border-bottom: solid #0d0d0d 2px;
   padding: 1px;
 
   transition: 0.2s;
 }
 
 header a:hover {
-  background: #0D0D0D;
-  color: #FFFFFF;
+  background: #0d0d0d;
+  color: #ffffff;
 }
 
 /* Project Section */
@@ -250,28 +209,10 @@ header a:hover {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  width: 100%;
   padding: 0 20vw 100px 20vw;
-  background: #F8F8F8;
-
-  animation: fade-3 1.5s;
-  animation-delay: 1s;
-  animation-timing-function: ease;
-  animation-fill-mode: forwards;
-
-  opacity: 0;
-
+  background: #f8f8f8;
   overflow: hidden;
-}
-
-@keyframes fade-3 {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
 }
 
 .project-wrapper p {
@@ -294,14 +235,14 @@ header a:hover {
   width: 48%;
   height: 250px;
   border-radius: 10px;
-  background: #DFDFDF;
+  background: #dfdfdf;
 
   transition: 0.2s;
 }
 
 .project-wrapper a:hover {
   margin: 45px 0 5px 0;
-  box-shadow: 0 5px 28px 0 rgba(0, 0, 0, 0.15)
+  box-shadow: 0 5px 28px 0 rgba(0, 0, 0, 0.15);
 }
 
 .project-wrapper a h3 {
@@ -322,43 +263,43 @@ header a:hover {
 }
 
 .project-wrapper .foodloose {
-  background: #FDD98F;
+  background: #fdd98f;
 }
 
 .project-wrapper .tuneback {
-  background: #0C0C0C;
+  background: #0c0c0c;
 }
 
 .project-wrapper .tuneback h3 {
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .project-wrapper .tuneback p {
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .project-wrapper .stress {
-  background: #FFFFFF;
+  background: #ffffff;
 }
 
 .project-wrapper .stress h3 {
-  color: #0D0D0D;
+  color: #0d0d0d;
 }
 
 .project-wrapper .stress p {
-  color: #0D0D0D;
+  color: #0d0d0d;
 }
 
 .project-wrapper .emphatic {
-  background: #FFFFFF;
+  background: #ffffff;
 }
 
 .project-wrapper .emphatic h3 {
-  color: #0D0D0D;
+  color: #0d0d0d;
 }
 
 .project-wrapper .emphatic p {
-  color: #0D0D0D;
+  color: #0d0d0d;
 }
 
 .project-wrapper .democracy {
@@ -366,11 +307,11 @@ header a:hover {
 }
 
 .project-wrapper .democracy h3 {
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .project-wrapper .democracy p {
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 /* Animated Mockups */
@@ -439,21 +380,43 @@ header a:hover {
 
 /* Project Headers */
 
-header.project {
-  padding: 15vh 20vw 0 20vw;
-  height: 50vh;
+.header-background {
+  width: 100%;
+  background: #f8f8f8;
 }
 
-header.project h1 {
-  margin: 0 0 25px 0;
+.project {
+  padding-top: 120px;
+  height: 400px;
+  margin: 0 auto;
+  max-width: 680px;
 }
+
+.project p {
+  font-size: 18px;
+  line-height: 200%;
+  display: flex;
+  align-items: center;
+}
+
+.project p svg {
+  padding-right: 8px;
+}
+
+.project strong {
+  width: 80px;
+}
+
+/* header.project h1 {
+  margin-bottom: 8px;
+} */
 
 header.tuneback {
-  background: #0C0C0C;
+  background: #0c0c0c;
 }
 
 header.tuneback h1 {
-  color: #F8F8F8;
+  color: #f8f8f8;
 }
 
 header.tuneback p {
@@ -461,7 +424,7 @@ header.tuneback p {
 }
 
 header.foodloose {
-  background: #FDD98F;
+  background: #fdd98f;
 }
 
 header.democracy {
@@ -469,7 +432,7 @@ header.democracy {
 }
 
 header.democracy h1 {
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 header.democracy p {
@@ -483,32 +446,14 @@ header.democracy p {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  max-width: 650px;
-  padding: 0 20px 0 20px;
-  margin: 0 auto 0 auto;
-
-  animation: fade-4 1s;
-  animation-delay: 1.5s;
-  animation-timing-function: ease;
-  animation-fill-mode: forwards;
-
-  opacity: 0;
-}
-
-@keyframes fade-4 {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
+  max-width: 680px;
+  margin: 0 auto;
 }
 
 .project-wrapper-text p {
-  font-size: 1.075em;
-  line-height: 1.75em;
-  color: #2D2D2D;
+  font-size: 16px;
+  line-height: 200%;
+  color: #000000;
 }
 
 .project-wrapper-text h2 {
@@ -522,7 +467,7 @@ header.democracy p {
 .project-wrapper-text figure img {
   border-radius: 10px;
   width: 100%;
-  box-shadow: 0 5px 28px 0 rgba(0, 0, 0, 0.15)
+  box-shadow: 0 5px 28px 0 rgba(0, 0, 0, 0.15);
 }
 
 .project-wrapper-text figure img.no-shadow {
@@ -531,29 +476,29 @@ header.democracy p {
 
 .project-wrapper-text figure figcaption {
   text-align: center;
-  font-family: "PT Sans", sans-serif;
+  font-family: "Inter", sans-serif;
   line-height: 1.75em;
   font-weight: 400;
   font-size: 0.9em;
-  color: #494949;
+  color: #000000;
   padding: 15px 0 0 0;
 }
 
 .void-text p {
-  color: #EEEEEE;
+  color: #eeeeee;
 }
 
 .project-background {
   width: 100vw;
-  background: #F8F8F8;
+  background: #ffffff;
 }
 
 .project-background-void {
-  background: #0C0C0C;
+  background: #0c0c0c;
 }
 
 .project-background-void h2 {
-  color: #F8F8F8;
+  color: #f8f8f8;
 }
 
 .button-to-app {
@@ -568,7 +513,6 @@ header.democracy p {
   border-radius: 5px;
 
   transition: 0.4s;
-
 }
 
 .button-to-default {
@@ -580,12 +524,12 @@ header.democracy p {
 }
 
 .button-void {
-  background: #DDDDDD;
+  background: #dddddd;
 }
 
 .button-void:hover {
-  background: #FFFFFF;
-  box-shadow: 0 0 20px -2.5px #5F5F5F;
+  background: #ffffff;
+  box-shadow: 0 0 20px -2.5px #5f5f5f;
 }
 
 /* Navigation Buttons */
@@ -618,26 +562,8 @@ header.democracy p {
   box-sizing: border-box;
   padding: 100px 20vw 100px 20vw;
   width: 100vw;
-  background: #FFFFFF;
-
-  animation: fade-5 1s;
-  animation-delay: 1s;
-  animation-timing-function: ease;
-  animation-fill-mode: forwards;
-
-  opacity: 0;
+  background: #ffffff;
 }
-
-@keyframes fade-5 {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
 
 #about-me h2 {
   padding: 0 0 15px 0;
@@ -672,41 +598,22 @@ header.democracy p {
 /* Footer */
 
 footer {
+  margin: 0 auto;
+  width: 680px;
   display: flex;
-  flex-direction: row;
   align-items: center;
-  background: #0D0D0D;
+  background: #000000;
   height: 250px;
   box-sizing: border-box;
 }
 
 footer a,
 footer p {
-  color: #F8F8F8;
-}
-
-footer a {
-  transition: 0.2s;
-}
-
-footer a svg {
-  margin-left: 20vw;
-  margin-right: 75px;
-  width: 25px;
-  height: 25px;
-  opacity: 1;
-}
-
-footer a:hover {
-  opacity: 0.5;
+  color: #ffffff;
 }
 
 .mail-me {
-  border-bottom: solid #F8F8F8 1px;
-}
-
-.mail-me:hover {
-  opacity: 0.5;
+  border-bottom: solid #ffffff 1px;
 }
 
 /* Responsive Styles */
@@ -714,13 +621,12 @@ footer a:hover {
 /* Smaller Desktops, Smaller Laptops & Tablets */
 
 @media all and (min-width: 900px) and (max-width: 1199px) {
-
-  header {
+  /* header {
     padding: 25vh 10vw 0 10vw;
-  }
+  } */
 
   .menu-bar {
-    background: #FFF;
+    background: #fff;
   }
 
   .project-wrapper {
@@ -738,20 +644,18 @@ footer a:hover {
   footer a svg {
     margin: 0 75px 0 0;
   }
-
 }
 
 /* Smaller Notebooks & Smaller Tablets */
 
 @media all and (min-width: 600px) and (max-width: 899px) {
-
-  header {
+  /* header {
     height: 500px;
     padding: 15vh 10vw 0 10vw;
-  }
+  } */
 
   .menu-bar {
-    background: #FFF;
+    background: #fff;
   }
 
   .project-wrapper {
@@ -838,29 +742,27 @@ footer a:hover {
   footer a svg {
     margin: 0 50px 0 0;
   }
-
 }
 
 /* Smartphones */
 
 @media all and (max-width: 599px) {
-
   h1 {
     font-size: 2em;
   }
 
-  header {
+  /* header {
     max-height: 500px;
     padding: 10vh 50px 0 50px;
-  }
+  } */
 
   .menu-bar {
-    background: #FFF;
+    background: #fff;
   }
 
-  header p {
+  /* header p {
     font-size: 1.05em;
-  }
+  } */
 
   .project-wrapper {
     padding: 0 50px 100px 50px;
@@ -951,15 +853,15 @@ footer a:hover {
       margin-top: -190px;
     }
   }
-
+  /* 
   header.project {
     padding: 100px 25px 75px 25px;
     height: auto;
-  }
-
+  } */
+  /* 
   header.project h1 {
     margin: 0 0 25px 0;
-  }
+  } */
 
   .project-wrapper-text {
     padding: 0px 25px 50px 25px;
@@ -971,7 +873,7 @@ footer a:hover {
 
   .project-wrapper-text h2 {
     font-size: 1.5em;
-    padding-top: 50px
+    padding-top: 50px;
   }
 
   .project-wrapper-text figure {
