--- a/css/style.css
+++ b/css/style.css
@@ -144,6 +144,11 @@ a {
   justify-content: space-between;
 }
 
+.image-crop {
+  object-fit: cover;
+  height: 360px;
+}
+
 /* Menu Bar */
 
 .menu-bar {
@@ -168,8 +173,29 @@ a {
   padding-right: 8px;
 }
 
-.menu-bar a:hover {
-  opacity: 0.4;
+.menu-bar.black a {
+  color: #fff;
+}
+
+.menu-bar.black span.link:hover {
+  border-bottom: solid rgb(255, 255, 255) 2px;
+}
+
+span.link {
+  transition: 0.2s;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  -ms-transition: 0.2s;
+  -o-transition: 0.2s;
+  border-bottom: solid rgba(0, 0, 0, 0) 2px;
+}
+
+span.link:hover {
+  border-bottom: solid rgb(0, 0, 0) 2px;
+}
+
+.button-void span.link:hover {
+  border-bottom: solid rgb(255, 255, 255) 2px;
 }
 
 /* Header */
@@ -385,6 +411,34 @@ header a:hover {
   background: #f8f8f8;
 }
 
+.header-background.black {
+  background: #000000;
+}
+
+.header-background.black h1,
+.header-background.black p,
+.header-background.black a {
+  color: #ffffff;
+}
+
+.header-background a {
+  font-size: 18px;
+  transition: 0.2s;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  -ms-transition: 0.2s;
+  -o-transition: 0.2s;
+  border-bottom: solid rgba(0, 0, 0, 0) 2px;
+}
+
+.header-background a:hover {
+  border-bottom: solid rgb(0, 0, 0) 2px;
+}
+
+.header-background.black a:hover {
+  border-bottom: solid rgb(255, 255, 255) 2px;
+}
+
 .project {
   padding-top: 120px;
   height: 400px;
@@ -405,39 +459,6 @@ header a:hover {
 
 .project strong {
   width: 80px;
-}
-
-/* header.project h1 {
-  margin-bottom: 8px;
-} */
-
-header.tuneback {
-  background: #0c0c0c;
-}
-
-header.tuneback h1 {
-  color: #f8f8f8;
-}
-
-header.tuneback p {
-  filter: invert(1);
-}
-
-header.foodloose {
-  background: #fdd98f;
-}
-
-header.democracy {
-  background: #000000;
-}
-
-header.democracy h1 {
-  color: #ffffff;
-}
-
-header.democracy p {
-  filter: invert(1);
-  color: #000000;
 }
 
 /* Project Content */
@@ -465,23 +486,22 @@ header.democracy p {
 }
 
 .project-wrapper-text figure img {
-  border-radius: 10px;
+  border-radius: 16px;
   width: 100%;
-  box-shadow: 0 5px 28px 0 rgba(0, 0, 0, 0.15);
-}
-
-.project-wrapper-text figure img.no-shadow {
-  box-shadow: none;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  -ms-border-radius: 16px;
+  -o-border-radius: 16px;
 }
 
 .project-wrapper-text figure figcaption {
   text-align: center;
   font-family: "Inter", sans-serif;
-  line-height: 1.75em;
+  line-height: 200%;
   font-weight: 400;
-  font-size: 0.9em;
+  font-size: 16px;
   color: #000000;
-  padding: 15px 0 0 0;
+  padding: 16px 0 0 0;
 }
 
 .void-text p {
@@ -502,34 +522,34 @@ header.democracy p {
 }
 
 .button-to-app {
-  font-size: 0.9em;
+  box-sizing: border-box;
   font-weight: 700;
   text-align: center;
-
   width: 100%;
-  height: 45px;
-  margin: 50px 0 0 0;
-  padding: 22.5px 0 0 0;
-  border-radius: 5px;
+  margin-top: 60px;
+  border-radius: 16px;
+  transition: 0.2s;
+  display: flex;
+  align-items: center;
+  padding: 32px;
+  justify-content: center;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  -ms-border-radius: 16px;
+  -o-border-radius: 16px;
+}
 
-  transition: 0.4s;
+.button-to-app svg {
+  padding-right: 8px;
 }
 
 .button-to-default {
-  background: rgb(240, 240, 240);
-}
-
-.button-to-default:hover {
-  background: rgb(235, 235, 235);
+  background: #f6f6f6;
 }
 
 .button-void {
-  background: #dddddd;
-}
-
-.button-void:hover {
-  background: #ffffff;
-  box-shadow: 0 0 20px -2.5px #5f5f5f;
+  background: #131313;
+  color: #fff;
 }
 
 /* Navigation Buttons */
@@ -538,7 +558,7 @@ header.democracy p {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin: 150px 0 100px 0;
+  margin: 80px 0 80px 0;
 }
 
 .buttons a {
@@ -546,10 +566,12 @@ header.democracy p {
   font-weight: 700;
   background-repeat: no-repeat;
   transition: 0.2s;
+  display: flex;
+  align-items: center;
 }
 
-.buttons a:hover {
-  opacity: 0.5;
+.buttons a svg {
+  padding-right: 8px;
 }
 
 .void-invert {
@@ -598,18 +620,25 @@ header.democracy p {
 /* Footer */
 
 footer {
-  margin: 0 auto;
-  width: 680px;
-  display: flex;
-  align-items: center;
   background: #000000;
-  height: 250px;
-  box-sizing: border-box;
 }
 
 footer a,
 footer p {
   color: #ffffff;
+}
+
+footer .footer-wrapper {
+  margin: 0 auto;
+  width: 680px;
+  display: flex;
+  align-items: center;
+  height: 250px;
+  box-sizing: border-box;
+}
+
+footer svg {
+  padding-right: 32px;
 }
 
 .mail-me {
@@ -853,15 +882,6 @@ footer p {
       margin-top: -190px;
     }
   }
-  /* 
-  header.project {
-    padding: 100px 25px 75px 25px;
-    height: auto;
-  } */
-  /* 
-  header.project h1 {
-    margin: 0 0 25px 0;
-  } */
 
   .project-wrapper-text {
     padding: 0px 25px 50px 25px;
